Fixes navigation alignment issue, ticket DT-702

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -104,7 +104,6 @@ body {
         }
         ul {
             max-width: 80%;
-            float: none;
             text-align: center;
             padding: 0;
             @media @tablet {
